2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	Based on a patch from Jeremy Katz <katzj@redhat.com>:
	* docs/grub.texi (Stage2 errors): Added documentation on the
	error number 33 (Serial device not configured).
	* grub/asmstub.c (serial_exists): New function.
	* stage2/serial.c (serial_exists): Likewise.
	* stage2/serial.h (serial_exists): New prototype.
	* stage2/shared.h (grub_error_t): ERR_NEED_SERIAL is added.
	* stage2/builtins.c (terminal_func) [SUPPORT_SERIAL]: If a
	serial device is not configured yet, restore the terminal and
	set ERRNUM to ERR_NEED_SERIAL.
	* stage2/common.c (err_list): Added an item for ERR_NEED_SERIAL.
	
2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>

	From Jason Thomas <jason@topic.com.au>:
	* util/grub-install.in (convert): Add support for DAC960.

	From Adrian Phillips <a.phillips@dnmi.no>:
	* lib/device.c (get_dac960_disk_name): New function.
	(init_device_map) [__linux__]: Add support for DAC960.
	
2001-10-11  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_super_block): Updated
	to better match recent reiserfs versions.
	(reiserfs_mount): Handle cases where journal can't be found,
	e.g. journal on another disk or unexpected journal parameters.
	In that case the journal isn't used.
	
2001-10-10  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount):  Don't look at
	the superblock field s_journal_block_count anymore.  It used
	to contain 0, it never contained a valid value, and now I
	have a report that it can contain an invalid value.
	Bug reported by Jim Caley <caley@chesco.com>.
	
2001-09-24  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_dir):  Set errnum to 
	ERR_FSYS_CORRUPT if a symlink can't be read for some reason,
	but no error is set by read.
	
2001-08-08  OKUJI Yoshinori  <okuji@gnu.org>

	From Derrik Pates <dpates@dsdk12.net>:
	* stage2/asm.S [!STAGE1_5] (grub_halt): Set the level of APM
	support to 1.1, before turning off the power state.
	